# fracada

./: .stylish-haskell.yaml  README.md  cabal.project  fracada.cabal
exe/: Emulator.hs  ScriptDump.hs
src/: Fracada.hs
