Cabal-Version:      3.4
Name:               fracada
Version:            0.1.0.0
Author:              dcSpark
Maintainer:          github@dcspark.io
Build-Type:          Simple
Copyright:           © 2021 dcSpark
License:             NONE
License-files:       LICENSE

common common-extensions
  default-extensions: 
    , DataKinds
    , DeriveAnyClass
    , DeriveGeneric
    , DerivingStrategies
    , ExplicitForAll
    , FunctionalDependencies
    , GADTs
    , MultiParamTypeClasses
    , NamedFieldPuns
    , OverloadedStrings
    , PolyKinds
    , KindSignatures
    , StandaloneDeriving
    , TemplateHaskell
    , TypeApplications
    , TypeFamilies
    , TypeOperators
    , MultiParamTypeClasses
    , ScopedTypeVariables
    , StandaloneKindSignatures
  

library
  hs-source-dirs:      src
  exposed-modules:     Fracada
  build-depends:       
    , aeson
    , base ^>=4.14.1.0
    , bytestring
    , containers
    , freer-extras
    , plutus-core
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , text
    , playground-common

  -- import: common-extensions 

  default-language:   Haskell2010
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable           Emulator
  main-is:           Emulator.hs
  hs-source-dirs:    exe, src
  other-modules:     Fracada
  build-depends:     
    , base
    , aeson
    , cardano-api
    , bytestring
    , containers
    , freer-extras
    , plutus-core
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , text
    , playground-common
    , lens
    , data-default
    , tasty
  default-language:   Haskell2010
  import: common-extensions
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
