cabal-version: 3.4
name:          fracada
version:       0.1.0.0
author:        dcSpark
maintainer:    github@dcspark.io
build-type:    Simple
copyright:     2021 dcSpark
license:
license-files: LICENSE

common common-ghc-options
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise
    

library
  hs-source-dirs:   src
  exposed-modules:  Fracada
  build-depends:
    , aeson
    , base               ^>=4.14.1.0
    , bytestring
    , containers
    , freer-extras
    , playground-common
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , text

  default-language: Haskell2010
  import: common-ghc-options 

executable          test
  main-is:          Emulator.hs
  hs-source-dirs:   exe src
  other-modules:    Fracada
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-api
    , containers
    , data-default
    , freer-extras
    , lens
    , playground-common
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , tasty
    , text

  default-language: Haskell2010
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise

executable           script-dump
  main-is:           ScriptDump.hs
  hs-source-dirs:    exe, src
  other-modules:     Fracada
  build-depends:     base
                    , aeson
                    , cardano-api
                    , cardano-ledger-alonzo
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , serialise
                    , playground-common
  default-language:   Haskell2010
